Added support for APS 2.3.8.7 and 2.4.2.10 (#87)