@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.alfresco.activiti</groupId>
 		<artifactId>aps-project</artifactId>
-		<version>2.5.0</version>
+		<version>2.5.1</version>
 	</parent>
 
 	<dependencyManagement>
@@ -380,34 +380,6 @@
 				<plugins>
 					<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-			</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>surefire-openjdk-11</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-				<jdk>11</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<skip>${skip.integration.test}</skip>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 				</plugins>
 			</build>
